--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
 
     <link rel="stylesheet" href="https://fonts.sandbox.google.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+    <style>
+        #board {
+            max-width: 1120px;
+        }
+        #board[style*="width"] {
+            max-width: unset;
+        }
+    </style>
 </head>
 
 <body>
@@ -16,95 +25,104 @@
         <h1>MTG Arena Deck Analyser</h1>
     </header>
 
-    <div style="display: inline-block; vertical-align: top; margin: 8px;">
-        <h2>Input</h2>
-        <textarea id="input" rows="20" cols="45" placeholder="Export a Deck from MTG Arena" onchange="read();"></textarea>
+    <div style="display: inline-block; vertical-align: top; width: 480px;">
+        <h2 style="margin-bottom: 0;">Input</h2>
+        <div style="display: inline-block; vertical-align: top; margin: 8px;">
+            <textarea id="input" style="width: 400px; height: 240px;" placeholder="Export a Deck from MTG Arena" onchange="read();"></textarea>
+        </div>
     </div>
-    <div style="display: inline-block; vertical-align: top; margin: 8px;">
-        <h3>Share this deck</h3>
-        <div id="link"></div>
+
+    <div style="display: inline-block; vertical-align: top; width: 640px;">
+        <h2 style="margin-bottom: 0;">Share this deck</h2>
+        <div style="display: inline-block; vertical-align: top; margin: 8px;">
+            <div id="link"></div>
+        </div>
+    </div>
+
+    <h2 style="margin-bottom: 0;">Output</h2>
+    <div style="display: inline-block; vertical-align: top; width: 480px;">
+        <div style="display: inline-block; vertical-align: top; margin: 8px;">
+            <h3>Main Set</h3>
+            <div id="set"></div>
+        </div>
+        <div style="display: inline-block; vertical-align: top; margin: 8px;">
+            <h3>Format</h3>
+            <div id="format"></div>
+        </div>
+    </div>
+
+    <div style="display: inline-block; vertical-align: top; width: 662px;">
+        <div style="display: inline-block; vertical-align: top; margin: 8px;">
+            <h3>Color</h3>
+            <div id="color"></div>
+            <br>
+            <table>
+                <tr>
+                    <th>Mana Symbol</th>
+                </tr>
+                <tr>
+                    <td>
+                        <div id="symbol"></div>
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <div style="display: inline-block; vertical-align: top; margin: 8px;">
+            <h3>Archetype</h3>
+            <div id="decktype"></div>
+            <br>
+            <table>
+                <tr>
+                    <th>Keycard</th>
+                    <th>Subtype</th>
+                    <th>Keyword</th>
+                    <th>Type</th>
+                </tr>
+                <tr>
+                    <td>
+                        <div id="keycard"></div>
+                    </td>
+                    <td>
+                        <div id="subtype"></div>
+                    </td>
+                    <td>
+                        <div id="keyword"></div>
+                    </td>
+                    <td>
+                        <div id="archetype"></div>
+                    </td>
+                </tr>
+            </table>
+        </div>
     </div>
     <br>
 
-    <div style="display: inline-block; vertical-align: top; margin: 8px;">
-        <h2>Output</h2>
-        <h3>Format</h3>
-        <div id="format"></div>
+    <div style="display: inline-block; vertical-align: top; width: 480px;">
+        <div style="display: inline-block; vertical-align: top; margin: 8px;">
+            <h3>Rarity</h3>
+            <div id="rarity"></div>
+        </div>
+        <div style="display: inline-block; vertical-align: top; margin: 8px;">
+            <h3>Card Type</h3>
+            <div id="type"></div>
+        </div>
     </div>
-    <br>
 
-    <div style="display: inline-block; vertical-align: top; margin: 8px;">
-        <h3>Color</h3>
-        <div id="color"></div>
-        <br>
-        <table>
-            <tr>
-                <th>Mana Symbol</th>
-            </tr>
-            <tr>
-                <td>
-                    <div id="symbol"></div>
-                </td>
-            </tr>
-        </table>
+    <div style="display: inline-block; vertical-align: top; width: 662px;">
+        <div style="display: inline-block; vertical-align: top; margin: 8px;">
+            <h3>Mana Curve</h3>
+            <table>
+                <tr>
+                    <th>CMC</th>
+                </tr>
+                <tr>
+                    <td>
+                        <div id="cmc"></div>
+                    </td>
+                </tr>
+            </table>
+        </div>
     </div>
-    <div style="display: inline-block; vertical-align: top; margin: 8px;">
-        <h3>Archetype</h3>
-        <div id="decktype"></div>
-        <br>
-        <table>
-            <tr>
-                <th>Keycard</th>
-                <th>Subtype</th>
-                <th>Keyword</th>
-                <th>Type</th>
-            </tr>
-            <tr>
-                <td>
-                    <div id="keycard"></div>
-                </td>
-                <td>
-                    <div id="subtype"></div>
-                </td>
-                <td>
-                    <div id="keyword"></div>
-                </td>
-                <td>
-                    <div id="archetype"></div>
-                </td>
-            </tr>
-        </table>
-    </div>
-    <br>
-
-    <div style="display: inline-block; vertical-align: top; margin: 8px;">
-        <h3>Rarity</h3>
-        <div id="rarity"></div>
-    </div>
-    <div style="display: inline-block; vertical-align: top; margin: 8px;">
-        <h3>Main Set</h3>
-        <div id="set"></div>
-    </div>
-    <div style="display: inline-block; vertical-align: top; margin: 8px;">
-        <h3>Card Type</h3>
-        <div id="type"></div>
-    </div>
-    <br>
-
-    <div style="display: inline-block; vertical-align: top; margin: 8px;">
-        <h3>Mana Curve</h3>
-        <table>
-            <tr>
-                <th>CMC</th>
-            </tr>
-            <tr>
-                <td>
-                    <div id="cmc"></div>
-                </td>
-            </tr>
-        </table>
-    </div>
-    <br>
 
     <h3>Image</h3>
     <div style="display: inline-block; vertical-align: top; margin: 8px;">
@@ -126,7 +144,7 @@
     <br>
 
     <div style="display: inline-block; vertical-align: top; margin: 8px;">
-        <div id="board" style="width: 640px; resize: horizontal; overflow: hidden;"></div>
+        <div id="board" style="resize: horizontal; overflow: hidden;"></div>
     </div>
     <br>
     <br>
@@ -140,7 +158,7 @@
         (() => {
             let url = new URL(location.href);
             let searchParams = url.searchParams;
-            
+
             let input = searchParams.get('input');
             if (input) {
                 let val = '';
@@ -239,6 +257,10 @@
                         d.color = d.color || [];
                         d.colorIdentity = d.colorIdentity || [];
                         d.manaCost = d.manaCost || '';
+
+                        d.types = d.types || [];
+                        d.supertypes = d.supertypes || [];
+                        d.subtypes = d.subtypes || [];
                     });
 
                     if (d.length > 1 && d[0].layout === 'modal_dfc') {
@@ -666,20 +688,18 @@
                         }
                         let count = counts[i];
 
-                        d[0].printings.forEach(d => sets[d] = (sets[d] || 0) + count);
+                        if (!d[0].supertypes.includes('Basic')) {
+                            d[0].printings.forEach(d => sets[d] = (sets[d] || 0) + count);
+                        }
                     });
                     let keys = Object.keys(sets);
                     keys.sort((a, b) => sets[b] - sets[a]);
-                    if (keys.length > 8) {
-                        keys.length = 8;
+                    if (keys.length > 3) {
+                        keys.length = 3;
                     }
 
                     let html = '';
                     html += '<table>';
-                    html += '<tr>';
-                    html += '<th></th>';
-                    html += '<th>Set</th>';
-                    html += '</tr>';
                     keys.forEach(key => {
                         html += '<tr>';
                         html += '<td style="text-align: right;">' + sets[key] + '</td>';
